[package]
name = "novel2epub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
epub-builder = "0.7.4"
reqwest = { version = "0.12.9", features = ["cookies"] }
scraper = "0.21.0"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
